--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 <body>
     
     <div class="container">
-        <div id="div-one"  style="background:#3F0071"></div>
-        <div id="div-two"  style="background:#FB2576"></div>
-        <div id="div-three"  style="background:#332FD0"></div>
-        <div id="div-four"  style="background:#0002A1"></div>
+        <div id="div-one"  style="width: 200px; height: 200px; background:#3F0071"></div>
+        <div id="div-two"  style="width: 200px; height: 200px; background:#FB2576"></div>
+        <div id="div-three"  style="width: 200px; height: 200px; background:#332FD0"></div>
+        <div id="div-four"  style="width: 200px; height: 200px; background:#0002A1"></div>
     </div>
 
     <script src="assets/js/index.js"></script>
